Added koharness. Changed module directory name!

--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,10 @@
 		"composer/installers": "~1.0",
 		"kohana/core":         ">=3.3",
 		"php":                 ">=5.3.3"
-	}
+	},
+    "require-dev": {
+        "kohana/core":         "3.3.*@dev",
+        "kohana/unittest":     "3.3.*@dev",
+        "kohana/koharness":    "*@dev"
+    }
 }
